[tool.poetry]
name = "luv"
version = "0.1.0"
description = "git clone"
authors = ["TareqRafed <tareq.rafed22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
